# saas-gamificacao

./: .gitignore  AGENTS.md  AI_COURSE_GENERATION_SETUP.md  ANALISE_EDUAI_CONTROLLER.md  ANALISE_MULTI_TENANT_COMPLETA.md  ANALISE_SISTEMA_COMPLETA.md  CENARIOS_CRITICOS.md  CLAUDE.md  COMO_EXECUTAR_TESTE_COMPARATIVO.md  COMO_REINICIAR_FASTAPI_CORRETAMENTE.md  COMO_TESTAR_GEMINI_OTIMIZADO.md  COMPATIBILITY_REPORT.md  CONFIGURAR_HOSTS_WINDOWS.md  CORRECOES_IMPLEMENTADAS.md  CORRECOES_INTEGRACAO_LARAVEL_FASTAPI.md  DEPLOY.md  DESAFIO_FINAL_COMPLETO.md  ESTADO_ATUAL_SISTEMA.md  FLUXO_TESTE.md  GUIA_INSTALACAO_COMPLETO.md  GUIA_RAPIDO_TESTES.md  INDEX_DOCUMENTACAO.md  INTEGRACAO_AUTOMATICA_DESAFIO_FINAL.md  PLANO_TESTES_MANUAIS.md  PRODUCTION_CHECKLIST.md  RELATORIO_API_GEMINI.md  RELATORIO_COMPLETO_SISTEMA_IA.md  RELATORIO_TECNICO_GERACAO_CURSOS_PDF.md  RELATORIO_TESTES_COMPLETO.md  RESOLVER_ERRO_419.md  RESULTADO_TESTES_FINAL.md  ROTEIRO_EXECUCAO.md  ROTEIRO_TESTES_MANUAIS_COMPLETO.md  ROTEIRO_TESTE_COMPLETO.md  ROTEIRO_TESTE_FINAL.md  ROTEIRO_TESTE_PERSONAS.md  SOLUCAO_INTERFACE_WEB.md  SOLUCAO_RAPIDA_OPENAI_QUOTA.md  SUMARIO_EXECUTIVO_TESTES.md  TESTE_ACESSO_NIVEIS.md  (+69 more)
eduai-ai-service/: COMECE_AQUI.md  COMO_TESTAR.md  Dockerfile  INTEGRACAO_DESAFIO_FINAL.md  LEIA-ME.txt  PROXIMOS_PASSOS.md  QUICK_START.md  README.md  docker-compose.yml  executar_testes.bat  iniciar.bat  kill_port_8001.bat  list_gemini_models.py  pyproject.toml  requirements.txt  test_all_schemas.py  test_docs.py  test_gemini_integration.py  test_gemini_simple.py  test_integration.py  test_main_direct.py  (+2 more)
(+304 files in other folders)
